..F....... [ZBXNEXT-5725] added overflow for long text; added label vertical align to fix checkbox being cut with small lineheight

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -6776,6 +6776,12 @@ svg {
 .checkbox-list {
 	li {
 		margin-top: 4px;
+		overflow-x: hidden;
+		text-overflow: ellipsis;
+
+		label {
+			vertical-align: middle;
+		}
 	}
 }
 
